Wed Jun 11 00:33:00 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Makefile.in: Regenerated after xtra_PLUGIN_guile_libs change in
	../configure.in.

Sun Jun  8 14:37:26 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_lookupcar1): New procedure to cope with a race
 	condition during lookup (when using threads).
	(scm_lookupcar): Implement in terms of scm_lookupcar1.
	(SCM_CEVAL): Use scm_lookupcar1 instead of scm_lookupcar in one
 	place.

Fri Jun  6 19:05:07 1997  Jim Blandy  <jimb@totoro.cyclic.com>

	* regex-posix.c (scm_regexp_exec): Use the `start' argument if
	supplied.  (Change from Tim Pierce.) 

Thu Jun  5 16:38:19 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* struct.c (init_struct): Forget to mention this in the "Wed Jun 4
 	23:47:01 1997" changelog: Slots are now initialized with `#f' by
 	default and not `()'.  `#f' is the canonical non-value in Scheme,
 	right?

Wed Jun  4 23:47:01 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* struct.c (struct_printer): New variable that holds a handle on
 	the Scheme variable *struct-printer*.  This variable can be set by
 	Scheme code to override the printing of structures.
	(scm_print_struct): If struct_printer is set, call it.  If it is
	not set, or returns #f, print the structure in the old fashion.
	Include "eval.h" for scm_apply.
	
Tue Jun  3 23:01:39 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* struct.c (scm_struct_ref, scm_struct_set_x): Use
 	scm_struct_i_n_words to get the number of fields, not
 	-scm_struct_n_extra_words.

	On the route to fancier struct printing:
	* struct.c (scm_print_struct): New function to print a structure.
  	Include "genio.h" to support it.  This function doesn't do
 	anything interesting right now, but I think it should be here
 	anyway.
	* struct.h: Include "print.h" and add prototype for
 	scm_print_struct.
	* print.c (scm_iprin1): Call scm_print_struct instead of trying to
 	print structures ourself.
	