@@ -1,3 +1,7 @@
+Sat Jun 14 19:00:58 1997  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* scmsigs.c (sys_deliver_signals): add a comment about a probable bug.
+
 Wed Jun 11 00:33:00 1997  Jim Blandy  <jimb@floss.red-bean.com>
 
 	* Makefile.in: Regenerated after xtra_PLUGIN_guile_libs change in
